tests/cases/should_fail/literals/goodbye_world.stderr
error: unclosed string literal
 --> $DIR/goodbye_world.hash:1:8
1 |   print("goodbye world...
  |          ^^^^^^^^^^^^^^^^^ here
